# block3_cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  code_map.md  冷热缓存基准测试与项目改造方案.md  批量融合读取与读写流水线优化开发方案.md  正式打包与API导出方案.md  项目需求文档.md
.claude/: settings.local.json
experiments/: CLAUDE.md  code_map.md
experiments/phase5_20260717/: README.md
experiments/phase5_20260717/derived/: benchmark_results.csv  run_summary.csv  summarize_phase5_logs.py  test50_dispatch_ab.txt
experiments/phase6_20260717/: README.md  块内微分块v2实现方案.md
experiments/phase6_20260717/commands/: run_phase6_ab.sh
experiments/phase6_20260717/derived/: benchmark_results.csv  case_medians.csv  run_summary.csv  run_totals.csv  summarize_phase6_logs.py
experiments/批量融合读取与读写流水线优化开发方案实验数据归档/: README.md  批量融合读取与读写流水线优化开发方案.md
experiments/批量融合读取与读写流水线优化开发方案实验数据归档/derived/: case_medians.csv  pipeline_diagnostics.csv  run_totals.csv  test18_dispatch_ab.txt
generator_py/: CLAUDE.md  __init__.py  __main__.py  cli.py  code_map.md  core.py  gui.py  run.py  tui.py
include/block3d/: CLAUDE.md  benchmark_cache.hpp  code_map.md  converter.hpp  core.hpp  reader.hpp  rng.hpp  types.hpp
src/: CLAUDE.md  benchmark_cache.cpp  benchmark_cache.hpp  cli.cpp  code_map.md  converter.cpp  core.cpp  reader.cpp  run_test.cpp
tests/: CLAUDE.md  code_map.md  test_block3d.cpp  test_cli.cpp
tools/: compare_dispatch_ab.py  run_phase5_validation.py
